55.k8s-from-start/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
  clusterIP: None
