55.k8s-from-start/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  type: ClusterIP
  selector:
    app: myapp-deployment
  ports:
  - port: 80
    targetPort: 80
