55.k8s-from-start/ingress-app-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: app-gateway-ingress.yogeshpawar.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myservice
            port: 
              number: 80
