55.k8s-from-start/ingress-app-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: app-route-ingress.yogeshpawar.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myservice
            port: 
              number: 80
